--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: minima,
-author: AkmalKamaruddin,
-title: My GitHub Pages,
+theme: minima
+author: AkmalKamaruddin
+title: My GitHub Pages
 description: My Pages
