--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: minima
-author: AkmalKamaruddin
-title: My GitHub Pages
-description: My Pages
+title: n0rd1za's GitHub Pages
+description: This is where I share cool stuff
+author: n0rd1za
